@@ -5,6 +5,7 @@ AUX drone-runner-docker.service-1.6.2 371 BLAKE2B 1ffb5f836d87c444acbd494b2315ee
 AUX drone-runner-docker.sh 612 BLAKE2B becd739d917e1c924deeb297749034639591e02f5f3f11a60241b74d8edfd927f098ca17a5ccedc5d470b8279715eab9e92ae6d21d78b6d81f059089cb89d8be SHA512 ed2c6ce725467ca038eed6a66974a76bc61931aea89eed33ee4a1752cc30000d08671c52f84be1c582f3beb2ebbddf9240f975cfdb1a543abe527465ea5ff6a0
 DIST cloud.google.com%2Fgo%2F@v%2Fv0.26.0.mod 27 BLAKE2B 814b0fa8f12d5ce6171fa629b5a7eb34e0e882cc0c5430986896bb38c243e08dc83098f271227f4ba019e78f16dc97fbb381e833aff1819833d243b08add916b SHA512 5132f3438533427c0ab0fbb7a12112a7830ea9122662ed46019ff89c71d9cf80c02edc32dd5c892da572031b5a2cce100f2602fa6a19bea6be7c02781f701273
 DIST drone-runner-docker-1.6.2.tar.gz 59640 BLAKE2B ef89d275b29a4d7fe7407910b70cfd08f9e977d3c94fcaaf20fc05bf3a53e471e2d7660d676792829ea765696ee0747cb3b4a7cef33c163a8bf40df25686ea94 SHA512 f6a0190cce387c791bb59e91815ac4d617f3985e7f974d10b2b782c9e209c08943477da73eaa5cfb95e69b5cacb1c3feeac6ad0af22981268bfa676e656884b9
+DIST drone-runner-docker-1.6.3.tar.gz 59814 BLAKE2B 0bea0ca1cfb28f543437c73e3f6e60e100ed1c2a947c56ee59256f14696983d0340a5c08c3a2539c5acff2da9d0a568c6a04914bb763dd08b8dec0f3d006386f SHA512 0d1949d070bf9e088477569f10282178437e5b64b12a989e32d4dae1524d9290feb32690e4ae31e5e2a75b0bd291daf0a8373cdd574add97ef7cb9d75aeb8d5c
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.mod 36 BLAKE2B 52a2c5272e004524397df00dfa03b4c2d2ebd985a0c974236aad6b847d6b2b4b7c9b69ef48e263f4c67983b845b020d2004fe749b46fee3c0525da0416b20f3e SHA512 350a16c68553738ce8c2f4a6ac8beba66a7dcf2386a42aff938ebaa3bdc526bda8e5c51c493331eda4666cbcf8411ee7ca3aeb0768cc4f557f34585960f9eb84
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.zip 32735 BLAKE2B 5de266d7400ae80c027f209cea91c911e22b0ff4fc6a2e964e8906f1a86cc6905b9c12d2588d5fdc91d0d8e9501a0ddf2f7a376cca9935d21943386c3ef31979 SHA512 72621865ffc0cadd27603e2f4032f1cd9c9d8bdcb920b3ca9fd02dbf88e52876a6f092c5b74eceb136021c514b68dc599f0cbbf18ed1620b827d46462aa55e32
 DIST github.com%2F!burnt!sushi%2Ftoml%2F@v%2Fv0.3.1.mod 34 BLAKE2B ce54a247aef91043830bdf0603c8452ba38eceb1495af6e7a74c9119234a0dc5cd080cb25258c28f5e270acf91189a5ed33e361cbf17de2be5e37dadbda1d90d SHA512 320941bc3b7fb8bc595e6135cbc513a7583d129f0cd92508055291e141191066303cf75148e25198c21f6c6c539a790ea3210f3ecf5de6a2a03b70c753091146
@@ -186,5 +187,6 @@ EBUILD drone-runner-docker-1.5.2-r1.ebuild 922 BLAKE2B 9c2fa3bc7956ad881f90c5c25
 EBUILD drone-runner-docker-1.6.0.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
 EBUILD drone-runner-docker-1.6.1.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
 EBUILD drone-runner-docker-1.6.2.ebuild 10881 BLAKE2B 12c7f061e3574b3ed81f1d7af9164d9075e8fa94ac9a81d986ba1f749d506bebd640d8e7f920eb7594b72e50a7f4975e252b61f82bd3065503558bb89b5ee427 SHA512 c0ca8456ae4f8955238329a3f50d643c90e4b04bccadd37bebc1f8471d8f53bc352afbe8605524ea4091a7a3ddf93f4ac4811ea3b2ffd1bc3ba484de620fd40e
-MISC ChangeLog 1056 BLAKE2B 316af197c969155a424fb312d493db129c9cf5067a686e69ce71613b3d833901477902a852ca926be5a0bb5b02fdd4cb9228363147db30f60708f7043c7282de SHA512 4efd527f02554a41590a38b9fdc0873e5fd0144221391d187a265e17688738e1abe3e74a93017d0662a1212bf2cb585b6e1c56a87ead3a4c6e23ac1b4892838a
+EBUILD drone-runner-docker-1.6.3.ebuild 10934 BLAKE2B e501a511290ecc6fadfd6a8cf8758285b8025b8e2a40894f71bd09acb21d9718c3efe5dceefbdf0d9b9825a5647cf8659e4c56173b4e09b4ec0efa2fbd3b531b SHA512 05f477e1e12a43401323d53b4b5112d649d474b790ebd8f178c8f02ec986421c96a853ad4b6a7eaee42c591163b22c10e51ea3cb7455e3a7c61a913bee508b8b
+MISC ChangeLog 1243 BLAKE2B ce62050938d84373766ef143bfa993ed0ea9e110938b4584fe940433c84dc08fa1d3fbe56887766144cc8c5d80ce8473d567e4fd793367159713a93e114d33ea SHA512 427f4e8e035a64523c2f02a9fd79f180c8d25a26746f6ae89808db151fb013f18c156e9ddf70723d95cc6144f29fb4e9cbf525072084d829e627fd5e4399d9af
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
