@@ -1,0 +1,237 @@
+# Copyright 1999-2021 Gentoo Authors
+# Distributed under the terms of the GNU General Public License v2
+
+EAPI="7"
+
+inherit go-module systemd
+
+EGO_SUM=(
+"cloud.google.com/go v0.26.0/go.mod"
+"github.com/99designs/basicauth-go v0.0.0-20160802081356-2a93ba0f464d"
+"github.com/99designs/basicauth-go v0.0.0-20160802081356-2a93ba0f464d/go.mod"
+"github.com/99designs/httpsignatures-go v0.0.0-20170731043157-88528bf4ca7e"
+"github.com/99designs/httpsignatures-go v0.0.0-20170731043157-88528bf4ca7e/go.mod"
+"github.com/Azure/go-ansiterm v0.0.0-20170929234023-d6e3b3328b78"
+"github.com/Azure/go-ansiterm v0.0.0-20170929234023-d6e3b3328b78/go.mod"
+"github.com/BurntSushi/toml v0.3.1/go.mod"
+"github.com/Microsoft/go-winio v0.4.11"
+"github.com/Microsoft/go-winio v0.4.11/go.mod"
+"github.com/alecthomas/template v0.0.0-20160405071501-a0175ee3bccc"
+"github.com/alecthomas/template v0.0.0-20160405071501-a0175ee3bccc/go.mod"
+"github.com/alecthomas/units v0.0.0-20151022065526-2efee857e7cf"
+"github.com/alecthomas/units v0.0.0-20151022065526-2efee857e7cf/go.mod"
+"github.com/bmatcuk/doublestar v1.1.1"
+"github.com/bmatcuk/doublestar v1.1.1/go.mod"
+"github.com/buildkite/yaml v2.1.0+incompatible"
+"github.com/buildkite/yaml v2.1.0+incompatible/go.mod"
+"github.com/census-instrumentation/opencensus-proto v0.2.1/go.mod"
+"github.com/client9/misspell v0.3.4/go.mod"
+"github.com/cncf/udpa/go v0.0.0-20191209042840-269d4d468f6f/go.mod"
+"github.com/containerd/containerd v1.3.4"
+"github.com/containerd/containerd v1.3.4/go.mod"
+"github.com/coreos/go-semver v0.3.0"
+"github.com/coreos/go-semver v0.3.0/go.mod"
+"github.com/davecgh/go-spew v1.1.0/go.mod"
+"github.com/davecgh/go-spew v1.1.1"
+"github.com/davecgh/go-spew v1.1.1/go.mod"
+"github.com/dchest/uniuri v0.0.0-20160212164326-8902c56451e9"
+"github.com/dchest/uniuri v0.0.0-20160212164326-8902c56451e9/go.mod"
+"github.com/docker/distribution v2.7.1+incompatible"
+"github.com/docker/distribution v2.7.1+incompatible/go.mod"
+"github.com/docker/engine v17.12.0-ce-rc1.0.20200309214505-aa6a9891b09c+incompatible"
+"github.com/docker/engine v17.12.0-ce-rc1.0.20200309214505-aa6a9891b09c+incompatible/go.mod"
+"github.com/docker/go-connections v0.3.0"
+"github.com/docker/go-connections v0.3.0/go.mod"
+"github.com/docker/go-units v0.4.0"
+"github.com/docker/go-units v0.4.0/go.mod"
+"github.com/drone/drone-go v1.2.1-0.20200326064413-195394da1018"
+"github.com/drone/drone-go v1.2.1-0.20200326064413-195394da1018/go.mod"
+"github.com/drone/drone-go v1.4.1-0.20201109202657-b9e58bbbcf27"
+"github.com/drone/drone-go v1.4.1-0.20201109202657-b9e58bbbcf27/go.mod"
+"github.com/drone/envsubst v1.0.2"
+"github.com/drone/envsubst v1.0.2/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200506182602-d2e6327ade15"
+"github.com/drone/runner-go v1.6.1-0.20200506182602-d2e6327ade15/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200812000613-56f7972d3926"
+"github.com/drone/runner-go v1.6.1-0.20200812000613-56f7972d3926/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200813033918-b849bd35b2eb"
+"github.com/drone/runner-go v1.6.1-0.20200813033918-b849bd35b2eb/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200909134029-fcb3f98de0a9"
+"github.com/drone/runner-go v1.6.1-0.20200909134029-fcb3f98de0a9/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200915182738-e567c860a85f"
+"github.com/drone/runner-go v1.6.1-0.20200915182738-e567c860a85f/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200915183738-9497cc9f42d2"
+"github.com/drone/runner-go v1.6.1-0.20200915183738-9497cc9f42d2/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200921133603-3bba1bdfc563"
+"github.com/drone/runner-go v1.6.1-0.20200921133603-3bba1bdfc563/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20200921171532-3b4667a1ac54"
+"github.com/drone/runner-go v1.6.1-0.20200921171532-3b4667a1ac54/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20201008195716-df774e029a03"
+"github.com/drone/runner-go v1.6.1-0.20201008195716-df774e029a03/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20201015180055-9f0ba71ae255"
+"github.com/drone/runner-go v1.6.1-0.20201015180055-9f0ba71ae255/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20201016191343-2020a87dfb8c"
+"github.com/drone/runner-go v1.6.1-0.20201016191343-2020a87dfb8c/go.mod"
+"github.com/drone/runner-go v1.6.1-0.20201109204555-a2c975273a49"
+"github.com/drone/runner-go v1.6.1-0.20201109204555-a2c975273a49/go.mod"
+"github.com/drone/signal v1.0.0"
+"github.com/drone/signal v1.0.0/go.mod"
+"github.com/envoyproxy/go-control-plane v0.9.0/go.mod"
+"github.com/envoyproxy/go-control-plane v0.9.4/go.mod"
+"github.com/envoyproxy/protoc-gen-validate v0.1.0/go.mod"
+"github.com/ghodss/yaml v1.0.0"
+"github.com/ghodss/yaml v1.0.0/go.mod"
+"github.com/gogo/protobuf v0.0.0-20170307180453-100ba4e88506"
+"github.com/gogo/protobuf v0.0.0-20170307180453-100ba4e88506/go.mod"
+"github.com/golang/glog v0.0.0-20160126235308-23def4e6c14b/go.mod"
+"github.com/golang/mock v1.1.1/go.mod"
+"github.com/golang/protobuf v1.2.0/go.mod"
+"github.com/golang/protobuf v1.3.2/go.mod"
+"github.com/golang/protobuf v1.3.3"
+"github.com/golang/protobuf v1.3.3/go.mod"
+"github.com/google/go-cmp v0.2.0/go.mod"
+"github.com/google/go-cmp v0.3.0"
+"github.com/google/go-cmp v0.3.0/go.mod"
+"github.com/gorilla/mux v1.7.4"
+"github.com/gorilla/mux v1.7.4/go.mod"
+"github.com/hashicorp/errwrap v1.0.0"
+"github.com/hashicorp/errwrap v1.0.0/go.mod"
+"github.com/hashicorp/go-multierror v1.0.0"
+"github.com/hashicorp/go-multierror v1.0.0/go.mod"
+"github.com/joho/godotenv v1.3.0"
+"github.com/joho/godotenv v1.3.0/go.mod"
+"github.com/kelseyhightower/envconfig v1.4.0"
+"github.com/kelseyhightower/envconfig v1.4.0/go.mod"
+"github.com/konsorten/go-windows-terminal-sequences v1.0.1"
+"github.com/konsorten/go-windows-terminal-sequences v1.0.1/go.mod"
+"github.com/kr/pretty v0.1.0"
+"github.com/kr/pretty v0.1.0/go.mod"
+"github.com/kr/pty v1.1.1/go.mod"
+"github.com/kr/text v0.1.0"
+"github.com/kr/text v0.1.0/go.mod"
+"github.com/mattn/go-isatty v0.0.8"
+"github.com/mattn/go-isatty v0.0.8/go.mod"
+"github.com/morikuni/aec v1.0.0"
+"github.com/morikuni/aec v1.0.0/go.mod"
+"github.com/natessilva/dag v0.0.0-20180124060714-7194b8dcc5c4"
+"github.com/natessilva/dag v0.0.0-20180124060714-7194b8dcc5c4/go.mod"
+"github.com/opencontainers/go-digest v1.0.0-rc1"
+"github.com/opencontainers/go-digest v1.0.0-rc1/go.mod"
+"github.com/opencontainers/image-spec v1.0.1"
+"github.com/opencontainers/image-spec v1.0.1/go.mod"
+"github.com/pkg/errors v0.8.1"
+"github.com/pkg/errors v0.8.1/go.mod"
+"github.com/pmezard/go-difflib v1.0.0"
+"github.com/pmezard/go-difflib v1.0.0/go.mod"
+"github.com/prometheus/client_model v0.0.0-20190812154241-14fe0d1b01d4/go.mod"
+"github.com/sirupsen/logrus v1.4.2"
+"github.com/sirupsen/logrus v1.4.2/go.mod"
+"github.com/stretchr/objx v0.1.0/go.mod"
+"github.com/stretchr/objx v0.1.1/go.mod"
+"github.com/stretchr/testify v1.2.2/go.mod"
+"github.com/stretchr/testify v1.3.0"
+"github.com/stretchr/testify v1.3.0/go.mod"
+"golang.org/x/crypto v0.0.0-20190308221718-c2843e01d9a2/go.mod"
+"golang.org/x/crypto v0.0.0-20190621222207-cc06ce4a13d4"
+"golang.org/x/crypto v0.0.0-20190621222207-cc06ce4a13d4/go.mod"
+"golang.org/x/exp v0.0.0-20190121172915-509febef88a4/go.mod"
+"golang.org/x/lint v0.0.0-20181026193005-c67002cb31c3/go.mod"
+"golang.org/x/lint v0.0.0-20190227174305-5b3e6a55c961/go.mod"
+"golang.org/x/lint v0.0.0-20190313153728-d0100b6bd8b3/go.mod"
+"golang.org/x/net v0.0.0-20180724234803-3673e40ba225/go.mod"
+"golang.org/x/net v0.0.0-20180826012351-8a410e7b638d/go.mod"
+"golang.org/x/net v0.0.0-20190213061140-3a22650c66bd/go.mod"
+"golang.org/x/net v0.0.0-20190311183353-d8887717615a/go.mod"
+"golang.org/x/net v0.0.0-20190404232315-eb5bcb51f2a3"
+"golang.org/x/net v0.0.0-20190404232315-eb5bcb51f2a3/go.mod"
+"golang.org/x/oauth2 v0.0.0-20180821212333-d2e6202438be/go.mod"
+"golang.org/x/sync v0.0.0-20180314180146-1d60e4601c6f/go.mod"
+"golang.org/x/sync v0.0.0-20181108010431-42b317875d0f/go.mod"
+"golang.org/x/sync v0.0.0-20190423024810-112230192c58"
+"golang.org/x/sync v0.0.0-20190423024810-112230192c58/go.mod"
+"golang.org/x/sys v0.0.0-20180830151530-49385e6e1522/go.mod"
+"golang.org/x/sys v0.0.0-20190215142949-d0b11bdaac8a/go.mod"
+"golang.org/x/sys v0.0.0-20190222072716-a9d3bda3a223/go.mod"
+"golang.org/x/sys v0.0.0-20190412213103-97732733099d/go.mod"
+"golang.org/x/sys v0.0.0-20190422165155-953cdadca894"
+"golang.org/x/sys v0.0.0-20190422165155-953cdadca894/go.mod"
+"golang.org/x/text v0.3.0"
+"golang.org/x/text v0.3.0/go.mod"
+"golang.org/x/time v0.0.0-20181108054448-85acf8d2951c"
+"golang.org/x/time v0.0.0-20181108054448-85acf8d2951c/go.mod"
+"golang.org/x/tools v0.0.0-20190114222345-bf090417da8b/go.mod"
+"golang.org/x/tools v0.0.0-20190226205152-f727befe758c/go.mod"
+"golang.org/x/tools v0.0.0-20190311212946-11955173bddd/go.mod"
+"golang.org/x/tools v0.0.0-20190524140312-2c0ae7006135/go.mod"
+"google.golang.org/appengine v1.1.0/go.mod"
+"google.golang.org/appengine v1.4.0/go.mod"
+"google.golang.org/genproto v0.0.0-20180817151627-c66870c02cf8/go.mod"
+"google.golang.org/genproto v0.0.0-20190819201941-24fa4b261c55"
+"google.golang.org/genproto v0.0.0-20190819201941-24fa4b261c55/go.mod"
+"google.golang.org/grpc v1.19.0/go.mod"
+"google.golang.org/grpc v1.23.0/go.mod"
+"google.golang.org/grpc v1.25.1/go.mod"
+"google.golang.org/grpc v1.29.1"
+"google.golang.org/grpc v1.29.1/go.mod"
+"gopkg.in/alecthomas/kingpin.v2 v2.2.6"
+"gopkg.in/alecthomas/kingpin.v2 v2.2.6/go.mod"
+"gopkg.in/check.v1 v0.0.0-20161208181325-20d25e280405/go.mod"
+"gopkg.in/check.v1 v1.0.0-20180628173108-788fd7840127"
+"gopkg.in/check.v1 v1.0.0-20180628173108-788fd7840127/go.mod"
+"gopkg.in/yaml.v2 v2.2.2"
+"gopkg.in/yaml.v2 v2.2.2/go.mod"
+"gotest.tools v2.2.0+incompatible"
+"gotest.tools v2.2.0+incompatible/go.mod"
+"honnef.co/go/tools v0.0.0-20190102054323-c2f93a96b099/go.mod"
+"honnef.co/go/tools v0.0.0-20190523083050-ea95bdfd59fc/go.mod"
+)
+
+go-module_set_globals
+
+MY_PV="${PV/_rc/-rc}"
+
+DESCRIPTION="Drone CI - Docker Runner"
+HOMEPAGE="https://drone.io/ https://github.com/drone-runners/drone-runner-docker"
+
+if [[ ${PV} != 9999* ]] ; then
+	SRC_URI="https://github.com/drone-runners/drone-runner-docker/archive/v${MY_PV}.tar.gz -> ${P}.tar.gz
+		${EGO_SUM_SRC_URI}"
+	S="${WORKDIR}"
+else
+	EGIT_REPO_URI="https://github.com/drone-runners/drone-runner-docker"
+	inherit git-r3
+	S="${WORKDIR}/${P}"
+fi
+
+KEYWORDS="~amd64"
+LICENSE="|| ( PolyForm-Small-Business-1.0.0 PolyForm-Free-Trial-1.0.0 )"
+SLOT="0"
+
+RESTRICT="mirror"
+RDEPEND="acct-user/drone-runner-docker"
+
+src_compile() {
+	pushd "${P}" || die
+
+	go build || die
+
+	popd || die
+}
+
+src_install() {
+	pushd "${P}" || die
+
+	dosbin drone-runner-docker
+
+	popd || die
+
+	systemd_newunit "${FILESDIR}/${PN}.service-1.6.2" "${PN}.service"
+
+	insinto "/etc/drone-runner-docker"
+	newins "${FILESDIR}/app.ini-1.6.2" app.ini
+
+	fowners drone-runner-docker:drone-runner-docker /etc/drone-runner-docker
+	fperms 0700 /etc/drone-runner-docker
+	fowners drone-runner-docker:drone-runner-docker /etc/drone-runner-docker/app.ini
+	fperms 0600 /etc/drone-runner-docker/app.ini
+}
