@@ -1,3 +1,9 @@
+*drone-runner-docker-1.6.3 (23 Feb 2021)
+
+  23 Feb 2021; Manuel Friedli <manuel@gentoo.org>
+  +drone-runner-docker-1.6.3.ebuild:
+  dev-util/drone-runner-docker: Ebuild for version 1.6.3
+
 *drone-runner-docker-1.6.1 (24 Nov 2020)
 
   24 Nov 2020; Manuel Friedli <manuel@gentoo.org>
